--- a/RestfulDEMO.UI/Views/Regions/Index.cshtml
+++ b/RestfulDEMO.UI/Views/Regions/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 
 @model IEnumerable<RestfulDEMO.UI.Models.Dto.RegionDto>
@@ -18,6 +15,7 @@
             <th>Id</th>
             <th>Code</th>
             <th>Name</th>
+            <th> </th>
         </tr>
     </thead>
     <tbody>
@@ -27,12 +25,10 @@
                 <td>@walk.Id</td>
                 <td>@walk.Code</td>
                 <td>@walk.Name</td>
+                <td>
+                    <a asp-controller="Regions" asp-action="Edit" asp-route-id="@walk.Id" class="btn btn-light">Edit</a>
+                </td>
             </tr>
         }
     </tbody>
 </table>
-
-@* @if (ViewBag.Response is not null)
-{
-    <p>@ViewBag.Response</p>
-} *@
